<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/bg1"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/note_c2"
        android:layout_width="match_parent"
        android:layout_height="140sp"
        android:clickable="true"
        android:focusable="false"
        android:layout_marginTop="50sp"
        android:background="@color/itemBG"
        app:layout_constraintBottom_toTopOf="@+id/note_c3"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textC2"
            android:fontFamily="cursive"
            android:textSize="50sp"
            android:textColor="@color/fontColor"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/octave2"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/statusC2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusC2"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="18sp"
            android:textColor="@color/fontColor"
            android:layout_width="match_parent"
            android:layout_height="43sp"
            android:layout_marginTop="80sp"
            android:gravity="center"
            android:text="@string/note_bad"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/note_c3"
        android:layout_width="match_parent"
        android:layout_height="140sp"
        android:clickable="true"
        android:focusable="false"
        android:layout_marginTop="12sp"
        android:background="@color/itemBG"
        app:layout_constraintBottom_toTopOf="@+id/note_c4"
        app:layout_constraintTop_toBottomOf="@+id/note_c2">

        <TextView
            android:id="@+id/textC3"
            android:fontFamily="cursive"
            android:textSize="50sp"
            android:textColor="@color/fontColor"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/octave3"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/statusC3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusC3"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="18sp"
            android:textColor="@color/fontColor"
            android:layout_width="match_parent"
            android:layout_height="43sp"
            android:layout_marginTop="80sp"
            android:gravity="center"
            android:text="@string/note_bad"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/note_c4"
        android:layout_width="match_parent"
        android:layout_height="140sp"
        android:layout_marginTop="12sp"
        android:clickable="true"
        android:focusable="false"
        android:background="@color/itemBG"
        app:layout_constraintBottom_toTopOf="@+id/note_c5"
        app:layout_constraintTop_toBottomOf="@+id/note_c3">

        <TextView
            android:id="@+id/textC4"
            android:fontFamily="cursive"
            android:textSize="50sp"
            android:textColor="@color/fontColor"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/octave4"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/statusC4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusC4"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="18sp"
            android:textColor="@color/fontColor"
            android:layout_width="match_parent"
            android:layout_height="43sp"
            android:layout_marginTop="80sp"
            android:gravity="center"
            android:text="@string/note_bad"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/note_c5"
        android:layout_width="match_parent"
        android:layout_height="140sp"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="12sp"
        android:clickable="true"
        android:focusable="false"
        android:background="@color/itemBG"
        app:layout_constraintTop_toBottomOf="@+id/note_c4">

        <TextView
            android:id="@+id/textC5"
            android:fontFamily="cursive"
            android:textSize="50sp"
            android:textColor="@color/fontColor"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/octave5"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/statusC5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusC5"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="18sp"
            android:textColor="@color/fontColor"
            android:layout_width="match_parent"
            android:layout_height="43sp"
            android:layout_marginTop="80sp"
            android:gravity="center"
            android:text="@string/note_bad"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>